--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,12 @@ body {
 	font-size: 1.6rem;
 	line-height: 1.2;
 	height: 100%;
+	width: 100%;
+}
+
+.map-page_container {
+	display: flex;
+	flex-direction: column;
 }
 
 h1,
@@ -97,6 +103,11 @@ p {
 	border-radius: 3px;
 	display: flex;
 	overflow: hidden;
+	transition: all 200ms ease-in-out;
+}
+
+.navigation_box:hover {
+	background-color: rgb(255, 255, 255, 0.25);
 }
 
 .navigation_box-rounded {
@@ -138,6 +149,7 @@ p {
 	position: relative;
 	cursor: pointer;
 	width: 3.5rem;
+	height: 3.5rem;
 }
 
 .navigation_icon {
@@ -175,9 +187,82 @@ p {
 
 .hamburger_menu {
 	position: absolute;
-	/* display: none; */
-	width: 400px;
-	left: -400px;
+	opacity: 0;
+	width: 30rem;
+	background-color: #080808;
+	left: -30rem;
+	z-index: 9999999;
+	transition: all 300ms ease-in-out;
+	top: 0;
+	padding: 1rem 0;
+	height: 100%;
+}
+
+.hamburger_btn-back_container {
+	position: relative;
+	width: 3.5rem;
+	height: 3.5rem;
+	cursor: pointer;
+}
+
+.hamburger_link {
+	padding: 2rem 2rem;
+	text-decoration: none;
+	color: #bbbbbb;
+	font-size: 1.6rem;
+	text-transform: capitalize;
+	display: block;
+	position: relative;
+	border-bottom: 1px solid #1a1a1a;
+}
+
+.hamburger_link:hover,
+.hamburger_link:active {
+	text-decoration: none;
+	color: #bbbbbb;
+	background-color: #131313;
+}
+
+.hamburger_link--active {
+	background: #137ed7;
+	border: 0;
+	color: #fff;
+}
+
+.hamurger_link-icon {
+	font-size: 2rem;
+	position: absolute;
+}
+
+.hamburger_link--active:hover,
+.hamburger_link--active:active {
+	background: #137ed7;
+	border: 0;
+	color: #fff;
+}
+
+.hamburger_item-txt {
+	text-align: center;
+}
+
+.hamburger_menu-header {
+	display: flex;
+	align-items: center;
+	padding: 0 2rem;
+	margin-bottom: 3rem;
+}
+
+.hamburger_logo img {
+	height: 4rem;
+}
+
+.hamburger_btn-back_container {
+	margin-right: 3rem;
+}
+
+.hamburger_menu--active {
+	left: 0px;
+	opacity: 1;
 }
 
 /* || map */
@@ -196,7 +281,27 @@ p {
 	height: 100%;
 	display: flex;
 	position: relative;
+	/* overflow: hidden; */
+	transition: width 200ms ease-in-out;
 	flex-direction: column;
+	opacity: 1;
+}
+
+.map_tasks {
+	width: 38rem;
+	transition: width 200ms ease;
+	overflow: hidden;
+	height: 100%;
+}
+
+.map_agents {
+	width: 35rem;
+	transition: width 300ms ease;
+	overflow: hidden;
+}
+
+.map_col--collapsed {
+	width: 0;
 }
 
 .map_info-col_collaps {
@@ -205,6 +310,7 @@ p {
 	background-color: hsl(0, 0%, 60%, 0.5);
 	color: #fff;
 	cursor: pointer;
+	z-index: 9999;
 }
 
 .map_info-col_collaps--tasks {
@@ -361,4 +467,7 @@ p {
 	justify-content: center;
 	align-items: center;
 	cursor: pointer;
+}
+.map_container {
+	flex: 1;
 }
