--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,6 +360,21 @@ p {
 	height: 100%;
 }
 
+.map_info-col__containar {
+	position: relative;
+	height: 100%;
+}
+
+.map_info-col__containar-tabAgnet,
+.map_info-col__containar-tabTask {
+	display: none;
+}
+
+.map_info-col__containar-tabAgnet--active,
+.map_info-col__containar-tabTask--active {
+	display: block;
+}
+
 .tasks__empty_message-container {
 	position: absolute;
 	top: 50%;
@@ -394,6 +409,92 @@ p {
 .map_info-col_number--agents {
 	font-size: 1.6rem;
 	margin-right: 5px;
+}
+
+.map_info-col__item-task {
+	align-items: center;
+	justify-content: start !important;
+}
+
+.map_info-col__item-task--progress {
+	height: 8rem;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: space-between;
+	margin: 0 1rem;
+}
+
+.map_info-col__item--image_name {
+	margin-top: 1rem;
+	font-size: 1.2rem;
+	text-align: center;
+	width: 4rem;
+}
+
+.map_info-col__item-task--more {
+	width: 5rem;
+	text-align: center;
+	transition: color 200ms ease;
+}
+
+.map_info-col__item-task--more:hover,
+.map_info-col__item-task--more:active {
+	color: #505050;
+}
+
+.map_info-col__item-task--info {
+	width: 22rem;
+}
+
+.map_info-col__item-task--time {
+	font-size: 1.4rem;
+	font-weight: bold;
+	margin-bottom: 0.5rem;
+}
+
+.map_info-col__item-task--title {
+	margin-bottom: 0.5rem;
+}
+
+.map_info-col__item-task--address {
+	font-size: 1.4rem;
+	color: #9e9e9e;
+}
+
+.map_info-col__item-task--status {
+	font-size: 1.2rem;
+	color: orangered;
+}
+
+.map_info-col__item-task--starting {
+	margin-bottom: 1.8rem;
+}
+
+.map_info-col__item-line {
+	flex: 1;
+	background: #ff9045;
+	width: 1px;
+}
+
+.map_info-col__item-points {
+	width: 1.8rem;
+	height: 1.8rem;
+	border-radius: 50%;
+	font-size: 1.11rem;
+	text-align: center;
+	padding-top: 2px;
+}
+
+.map_info-col__item-points--fill {
+	background: #ff9045;
+	padding-top: 3px;
+	color: #fff;
+}
+
+.map_info-col__item-points--border {
+	border: 1px solid #ff9045;
+	color: #ff9045;
 }
 
 .map_info-col__item {
@@ -468,6 +569,244 @@ p {
 	align-items: center;
 	cursor: pointer;
 }
+
 .map_container {
 	flex: 1;
+}
+
+.nav_popup {
+	display: none;
+	position: absolute;
+	background: #fff;
+	border: 1px solid #ddd;
+	box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+	border-radius: 5px;
+	overflow: hidden;
+	top: 6rem;
+	z-index: 999;
+}
+
+.nav_popup--active {
+	display: block;
+}
+
+.nav_popup-text {
+	display: inline-block;
+	padding: 1rem 2rem;
+	color: #000;
+	text-decoration: none;
+}
+
+.nav_popup-text:hover,
+.nav_popup-text:active {
+	text-decoration: none;
+	background-color: #f5f5f5;
+	color: #161616;
+}
+
+.menu_navigation_container {
+	right: 6rem;
+}
+
+.menu_navigation_container-grid {
+	display: grid;
+	grid-gap: 2rem;
+	padding: 3rem 2rem;
+	grid-template-columns: repeat(3, 1fr);
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+}
+
+.menu_navigation_container-box {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+.menu_navigation_container-par {
+	font-size: 1.4rem;
+	color: #000;
+}
+
+.menu_navigation_container-img {
+	width: 4rem;
+	margin-bottom: 1rem;
+	height: auto;
+}
+
+.notification_nav_container {
+	right: 2rem;
+	z-index: 9999999999999999;
+}
+
+.notification_container {
+	width: 35rem;
+	border: 1px solid #ddd;
+}
+
+.notification_container--header {
+	font-size: 1.6rem;
+	color: #3a3a3a;
+	background: #f3f3f3;
+	padding: 1rem 2rem;
+	border-bottom: 1px solid #ddd;
+}
+
+
+.notification_container--item {
+	padding: 1rem 2rem;
+	display: flex;
+	align-items: center;
+	border-bottom: 1px solid #ddd;
+}
+
+.notification_container--navigation_icon-contianer {
+	width: 2rem;
+	margin-right: 3rem;
+	text-align: center;
+	color: #9898e7;
+}
+
+.notification_container--navigation_text p {
+	font-size: 1.3rem;
+	color: #131313;
+}
+
+.notification_container--navigation_text span {
+	font-size: 1.1rem;
+	margin: 0;
+	color: #575757;
+}
+
+.notification_footer {
+	background: #f3f3f3;
+	padding: 1rem 2rem;
+}
+
+.notification_footer a {
+	font-size: 1.2rem !important;
+	text-align: center;
+	display: block;
+}
+
+@media only screen and (max-width:1000px) {
+	.navigation_box--item {
+		padding: 4px 5px;
+	}
+
+	.navigation_item:not(:last-child) {
+		margin-right: 1rem;
+	}
+}
+
+@media only screen and (max-width:750px) {
+	.navigation {
+		flex-direction: column;
+		padding: 2rem 4rem;
+	}
+
+	.navigation_first {
+		margin-bottom: 3rem;
+	}
+
+	.navigation_second {
+		justify-content: flex-end;
+	}
+
+	.navigation_box {
+		justify-items: center;
+		align-items: center;
+	}
+
+	.navigation_item:not(:last-child) {
+		margin-right: 1.5rem;
+	}
+
+	.navigation_box--item {
+		padding: 5px 10px;
+		text-align: center;
+		font-size: 1.4rem;
+		line-height: 1.2;
+	}
+
+	.navigation_icon {
+		font-size: 3rem;
+	}
+
+}
+
+@media only screen and (max-width:500px) {
+	.navigation {
+		flex-direction: column;
+		padding: 1rem 2rem;
+	}
+
+	.navigation_item {
+		font-size: 1rem;
+	}
+
+	.navigation_box--item {
+		font-size: 1rem;
+		padding: 5px 3px;
+	}
+
+	.navigation_logo {
+		height: 3rem;
+	}
+
+	.navigation_hamburgerBtn {
+		height: 2.5rem;
+	}
+
+	.navigation_hamburgerBtn--item {
+		width: 3rem;
+		height: 3px;
+	}
+
+	.navigation_hamburgerBtn--item::before,
+	.navigation_hamburgerBtn--item::after {
+		width: 2.5rem;
+		height: 2px;
+	}
+
+	.navigation_hamburgerBtn--item::after {
+		bottom: 8px;
+	}
+
+	.navigation_hamburgerBtn--item::before {
+		top: 8px;
+	}
+
+	.navigation_first {
+		margin-bottom: 2rem;
+	}
+
+	.navigation_hamburgerBtn {
+		display: block;
+	}
+
+	.navigation_item:not(:last-child) {
+		margin-right: 1rem;
+	}
+
+	.navigation_logoContainer {
+		display: block;
+	}
+
+	.navigation_second>.navigation_item {
+		display: block;
+	}
+
+	.navigation_icon {
+		font-size: 2rem;
+	}
+
+	.createTaskContainer {
+		right: 16rem;
+	}
+
+	.navigation_box--item-rounded {
+		font-size: 1.2rem;
+		padding: 5px;
+	}
 }
